attached_assets/Pasted-WARNING-WatchFiles-detected-changes-in-app-schemas-chat-py-app-schemas-init-py-Reloading-1745949739801.txt
WARNING:  WatchFiles detected changes in 'app/schemas/chat.py', 'app/schemas/__init__.py'. Reloading...
Process SpawnProcess-3:
Traceback (most recent call last):
  File "/usr/lib/python3.12/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/usr/lib/python3.12/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/home/stanley/tradewizard-bazaar/backend/venv/lib/python3.12/site-packages/uvicorn/_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "/home/stanley/tradewizard-bazaar/backend/venv/lib/python3.12/site-packages/uvicorn/server.py", line 66, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/asyncio/runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/home/stanley/tradewizard-bazaar/backend/venv/lib/python3.12/site-packages/uvicorn/server.py", line 70, in serve
    await self._serve(sockets)
  File "/home/stanley/tradewizard-bazaar/backend/venv/lib/python3.12/site-packages/uvicorn/server.py", line 77, in _serve
    config.load()
  File "/home/stanley/tradewizard-bazaar/backend/venv/lib/python3.12/site-packages/uvicorn/config.py", line 435, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/stanley/tradewizard-bazaar/backend/venv/lib/python3.12/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/stanley/tradewizard-bazaar/backend/app/main.py", line 17, in <module>
    from .routers import auth, user, robot, robot_request, purchase, ai_trading_signals, subscription, mpesa, card_payment, chat, notification
  File "/home/stanley/tradewizard-bazaar/backend/app/routers/__init__.py", line 2, in <module>
    from . import auth, user, robot, robot_request, purchase, mpesa
  File "/home/stanley/tradewizard-bazaar/backend/app/routers/auth.py", line 10, in <module>
    from ..schemas.user import UserCreate, UserLogin, UserResponse
  File "/home/stanley/tradewizard-bazaar/backend/app/schemas/__init__.py", line 5, in <module>
    from .chat import Conversation, ConversationCreate, Message, MessageCreate
  File "/home/stanley/tradewizard-bazaar/backend/app/schemas/chat.py", line 53
    >>>>>>> 81304081b7ff876300be50827e29718378aa233f
                   ^
SyntaxError: invalid decimal literal
